# ExcelPostprocessor

./: .gitignore  .pre-commit-config.yaml  README.md  cli.py  cli.spec  compile.sh  excel_postprocess.py  excel_postprocess.spec  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/actions/python-poetry-env/: action.yml
.github/workflows/: test.yml
docs/: api_docs.md  conf.py  index.rst
excel_postprocess.dist/: excel_postprocessor.xml
hooks/: pylint_compute_score.sh  run_documentation.sh
src/excel_postprocessor/: __main__.py  excel_postprocessor.py
src/excelpostprocessor/: __main__.py  excel_postprocessor.py  excel_postprocessor.xml  parser_runner.py  regex_parser.py
tests/: conftest.py  dummy_data.xlsx  excel_postprocess_cleaning_pattern_missing.xml  excel_postprocess_column_dict_missing.xml  excel_postprocess_column_name_field_missing.xml  excel_postprocess_multiple_rules.xml  excel_postprocess_sheet_missing.xml  excel_postprocess_sheet_name_field_missing.xml  excel_postprocess_sheet_name_missing.xml  excel_postprocess_single_cleaning_rule.xml  excel_postprocess_source_column_field_missing.xml  excel_postprocess_workbook_dict_missing.xml  excel_postprocess_workbook_name_field_missing.xml  excel_postprocess_workbook_name_missing.xml  excel_postprocess_workbook_name_not_found.xml  excel_postprocessor.xml  excel_postprocessor_cleaning_replace_missing.xml  excel_postprocessor_column_name_missing.xml  excel_postprocessor_extract_missing.xml  excel_postprocessor_extract_new_column_missing.xml  excel_postprocessor_extract_pattern_missing.xml  excel_postprocessor_ivus.xml  excel_postprocessor_sheet_dict_missing.xml  malformed.xml  temp.xlsx  test_data.xlsx  test_main.py  test_more_realistic.py  test_parser.py
