[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py37", "py38", "py39"]
include = '\.pyi?$'

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover'
]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.mypy]
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true
ignore_missing_imports = true
disable_error_code = ["call-arg", "call-overload", "var-annotated"]

[tool.poetry]
name = "ExcelPostprocessor"
version = "0.0.1"
description = "Python tools to search Excel fields and extract measurements."
authors = [
    "Kevin J. Delaney <kjdelaney@ucsd.edu>",
]
license = "MIT"
readme = "README.md"

documentation = "https://github.com/DBMI/ExcelPostprocessor"
homepage = "https://github.com/DBMI/ExcelPostprocessor"
repository = "https://github.com/DBMI/ExcelPostprocessor"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

packages = [
    { include = "excel_postprocessor", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.7.1, <4.0"
babel = "^2.12.1"
alabaster = "^0.7.13"

[tool.poetry.dev-dependencies]
autoflake = "*"
black = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-eradicate = "*"
flake8-logging-format = "*"
isort = "*"
make = "*"
mkdocs = "*"
mkdocstrings = "*"
mkdocs-material = "*"
mypy = "*"
pep8-naming = "*"
pre-commit = "*"
pymdown-extensions = "*"
pytest = "*"
pytest-github-actions-annotate-failures = "*"
pytest-cov = "*"
python-kacl = "*"
pyupgrade = "*"
sphinx = "*"
sphinx_markdown_builder = "*"
tryceratops = "*"
typing = "*"
wheel = "*"

[tool.pylint.format]
max-line-length="88"

[tool.pytest.ini_options]
addopts = """\
    --cov-report term-missing \
    --no-cov-on-fail \
"""
pythonpath = [".", "src"]
testpaths = ["excel_postprocessor"]
